Update contact email in index.html

--- a/index.html
+++ b/index.html
@@ -1811,7 +1811,7 @@
         Whether you're a developer who wants to contribute, an NGO working in digital literacy, or simply someone who wants to protect your family — we'd love to hear from you. Together, let's make India's digital journey safe for everyone.
       </p>
       <div class="cta-buttons reveal reveal-delay-3">
-        <a href="mailto:hello@gpt-we4.com" class="btn-cta-primary">
+        <a href="mailto:admin@gptwe4.com" class="btn-cta-primary">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
           Contact Us
         </a>
@@ -1861,7 +1861,7 @@
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Terms of Service</a></li>
           <li><a href="#">Security</a></li>
-          <li><a href="mailto:hello@gpt-we4.com">Contact</a></li>
+          <li><a href="mailto:admin@gptwe4.com">Contact</a></li>
         </ul>
       </div>
     </div>
